test/Macros/DebugDescription/error_computed_properties.code
// REQUIRES: language_language_parser

// RUN: %empty-directory(%t)
// RUN: %target-language-frontend %s -language-version 5 -module-name main -disable-availability-checking -typecheck -verify -plugin-path %language-plugin-dir

@DebugDescription
struct MyStruct {
  var name: String { "thirty" }

  // expected-error @+1 {{cannot reference computed properties}}
  var debugDescription: String { "name: \(name)" }
}
